# sample_app

./: .gcloudignore  .gitignore  .yamllint.yaml  README.md  pyproject.toml
app/: main.py
app/notebooks/: scratch.ipynb  testplots.ipynb
app/pages/: alixpartners.py  home.py
app/sql/: skill_counts_by_company_and_month.sql  skill_counts_by_occupation_category.sql  skill_counts_by_occupation_month.sql  skill_counts_by_role.sql  skill_counts_by_role_and_month.sql
app/utils/: ploting_utils.py  utils.py
docs/data/: alixpartners_1_26_2022.csv
