[tool.poetry]
name = "helix-mdp"
version = "0.1.0"
description = ""
authors = ["Ben Labaschin <ben@workhelix.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
ipykernel = "^6.6.0"
pyarrow = "^6.0.1"
boto3 = "^1.20.26"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
pyathena = "^2.4.1"
streamlit = "^1.4.0"
jupyter = "^1.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pre-commit = "^2.16.0"
jupyter = "^1.0.0"
streamlit = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
